2013-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* STM8: Fix stack handling in signed cast, fix wide right shift, minor refactoring.

2013-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix handling of a in addition, subtraction and negation, more flexible copy, fix comparison.

2013-04-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Update TODO/todo comments to reflect known bug vs optimization potential.

2013-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Various fixes.

2013-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Make lack of support for bit-fields explicit, implement binary complement, minor improvements.

2013-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix large operands in equality comparison of register with literal or stack op.
	* src/stm8/ralloc2.cc:
	  STM8: Fix liveness of registers at parameter pushes.

2013-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix parameter stack offset, fix handling of a in GET_VALUE_AT_ADDRESS.

2013-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix returning 4-byte values, fix saving of x, y over call, fix handling of registers in stack-to-stack copy.

2013-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic16regs.h:
	  New common header for the pic14 family.

2013-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/Makefile.in:
	  STM8: Add missing integer support functions.
	* src/stm8/gen.c:
	  STM8: Enable inline asm.

2013-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in,
	  support/regression/ports/stm8/spec.mk,
	  support/regression/ports/stm8/support.c,
	  support/regression/ports/stm8/uCsim.cmd:
	  STM8: Basic infrastructure for regression tests, partially from a patch by Valentin Dudouyt.
	* src/stm8/gen.c:
	  STM8: Name mangling for address generation.
